// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": "true",
        "importString": "import locale_en_46json_ff503de3 from "virtual:nuxt-i18n-ff503de3";",
        "key": ""locale_en_46json_ff503de3"",
        "load": "() => Promise.resolve(locale_en_46json_ff503de3)",
        "relative": "srcDir/en.json",
        "specifier": "virtual:nuxt-i18n-ff503de3",
      },
    ],
    "fr": [
      {
        "cache": "true",
        "importString": "import locale_fr_46json_3da2909c from "virtual:nuxt-i18n-3da2909c";",
        "key": ""locale_fr_46json_3da2909c"",
        "load": "() => Promise.resolve(locale_fr_46json_3da2909c)",
        "relative": "srcDir/fr.json",
        "specifier": "virtual:nuxt-i18n-3da2909c",
      },
    ],
    "ja": [
      {
        "cache": "true",
        "importString": "import locale_ja_46json_3369e867 from "virtual:nuxt-i18n-3369e867";",
        "key": ""locale_ja_46json_3369e867"",
        "load": "() => Promise.resolve(locale_ja_46json_3369e867)",
        "relative": "srcDir/ja.json",
        "specifier": "virtual:nuxt-i18n-3369e867",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`files with cache configuration (relative) 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": "true",
        "importString": "import locale_en_46json_e9231b3b from "virtual:nuxt-i18n-e9231b3b";",
        "key": ""locale_en_46json_e9231b3b"",
        "load": "() => import("virtual:nuxt-i18n-e9231b3b" /* webpackChunkName: "locale_en_46json_e9231b3b" */)",
        "relative": "srcDir/test/locales/en.json",
        "specifier": "virtual:nuxt-i18n-e9231b3b",
      },
    ],
    "es": [
      {
        "cache": "false",
        "importString": "import locale_es_46json_4fad0583 from "virtual:nuxt-i18n-4fad0583";",
        "key": ""locale_es_46json_4fad0583"",
        "load": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_es_46json_4fad0583" */)",
        "relative": "srcDir/test/locales/es.json",
        "specifier": "virtual:nuxt-i18n-4fad0583",
      },
    ],
    "es-AR": [
      {
        "cache": "false",
        "importString": "import locale_es_46json_4fad0583 from "virtual:nuxt-i18n-4fad0583";",
        "key": ""locale_es_46json_4fad0583"",
        "load": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_es_46json_4fad0583" */)",
        "relative": "srcDir/test/locales/es.json",
        "specifier": "virtual:nuxt-i18n-4fad0583",
      },
      {
        "cache": "true",
        "importString": "import locale_es_45AR_46json_5c77b60d from "virtual:nuxt-i18n-5c77b60d";",
        "key": ""locale_es_45AR_46json_5c77b60d"",
        "load": "() => import("virtual:nuxt-i18n-5c77b60d" /* webpackChunkName: "locale_es_45AR_46json_5c77b60d" */)",
        "relative": "srcDir/test/locales/es-AR.json",
        "specifier": "virtual:nuxt-i18n-5c77b60d",
      },
    ],
    "fr": [
      {
        "cache": "true",
        "importString": "import locale_fr_46json_5627016f from "virtual:nuxt-i18n-5627016f";",
        "key": ""locale_fr_46json_5627016f"",
        "load": "() => import("virtual:nuxt-i18n-5627016f" /* webpackChunkName: "locale_fr_46json_5627016f" */)",
        "relative": "srcDir/test/locales/fr.json",
        "specifier": "virtual:nuxt-i18n-5627016f",
      },
    ],
    "ja": [
      {
        "cache": "true",
        "importString": "import locale_ja_46json_354e4128 from "virtual:nuxt-i18n-354e4128";",
        "key": ""locale_ja_46json_354e4128"",
        "load": "() => import("virtual:nuxt-i18n-354e4128" /* webpackChunkName: "locale_ja_46json_354e4128" */)",
        "relative": "srcDir/test/locales/ja.json",
        "specifier": "virtual:nuxt-i18n-354e4128",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "locales/en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "locales/ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "locales/fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": false,
          "path": "locales/es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": false,
          "path": "locales/es.json",
        },
        {
          "cache": true,
          "path": "locales/es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "experimental": {
      "generatedLocaleFilePathFormat": "relative",
    },
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`files with cache configuration 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": "true",
        "importString": "import locale_en_46json_e9231b3b from "virtual:nuxt-i18n-e9231b3b";",
        "key": ""locale_en_46json_e9231b3b"",
        "load": "() => import("virtual:nuxt-i18n-e9231b3b" /* webpackChunkName: "locale_en_46json_e9231b3b" */)",
        "relative": "srcDir/test/locales/en.json",
        "specifier": "virtual:nuxt-i18n-e9231b3b",
      },
    ],
    "es": [
      {
        "cache": "false",
        "importString": "import locale_es_46json_4fad0583 from "virtual:nuxt-i18n-4fad0583";",
        "key": ""locale_es_46json_4fad0583"",
        "load": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_es_46json_4fad0583" */)",
        "relative": "srcDir/test/locales/es.json",
        "specifier": "virtual:nuxt-i18n-4fad0583",
      },
    ],
    "es-AR": [
      {
        "cache": "false",
        "importString": "import locale_es_46json_4fad0583 from "virtual:nuxt-i18n-4fad0583";",
        "key": ""locale_es_46json_4fad0583"",
        "load": "() => import("virtual:nuxt-i18n-4fad0583" /* webpackChunkName: "locale_es_46json_4fad0583" */)",
        "relative": "srcDir/test/locales/es.json",
        "specifier": "virtual:nuxt-i18n-4fad0583",
      },
      {
        "cache": "true",
        "importString": "import locale_es_45AR_46json_5c77b60d from "virtual:nuxt-i18n-5c77b60d";",
        "key": ""locale_es_45AR_46json_5c77b60d"",
        "load": "() => import("virtual:nuxt-i18n-5c77b60d" /* webpackChunkName: "locale_es_45AR_46json_5c77b60d" */)",
        "relative": "srcDir/test/locales/es-AR.json",
        "specifier": "virtual:nuxt-i18n-5c77b60d",
      },
    ],
    "fr": [
      {
        "cache": "true",
        "importString": "import locale_fr_46json_5627016f from "virtual:nuxt-i18n-5627016f";",
        "key": ""locale_fr_46json_5627016f"",
        "load": "() => import("virtual:nuxt-i18n-5627016f" /* webpackChunkName: "locale_fr_46json_5627016f" */)",
        "relative": "srcDir/test/locales/fr.json",
        "specifier": "virtual:nuxt-i18n-5627016f",
      },
    ],
    "ja": [
      {
        "cache": "true",
        "importString": "import locale_ja_46json_354e4128 from "virtual:nuxt-i18n-354e4128";",
        "key": ""locale_ja_46json_354e4128"",
        "load": "() => import("virtual:nuxt-i18n-354e4128" /* webpackChunkName: "locale_ja_46json_354e4128" */)",
        "relative": "srcDir/test/locales/ja.json",
        "specifier": "virtual:nuxt-i18n-354e4128",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "/test/locales/fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": false,
          "path": "/test/locales/es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": false,
          "path": "/test/locales/es.json",
        },
        {
          "cache": true,
          "path": "/test/locales/es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`lazy 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": "true",
        "importString": "import locale_en_46json_ff503de3 from "virtual:nuxt-i18n-ff503de3";",
        "key": ""locale_en_46json_ff503de3"",
        "load": "() => import("virtual:nuxt-i18n-ff503de3" /* webpackChunkName: "locale_en_46json_ff503de3" */)",
        "relative": "srcDir/en.json",
        "specifier": "virtual:nuxt-i18n-ff503de3",
      },
    ],
    "fr": [
      {
        "cache": "true",
        "importString": "import locale_fr_46json_3da2909c from "virtual:nuxt-i18n-3da2909c";",
        "key": ""locale_fr_46json_3da2909c"",
        "load": "() => import("virtual:nuxt-i18n-3da2909c" /* webpackChunkName: "locale_fr_46json_3da2909c" */)",
        "relative": "srcDir/fr.json",
        "specifier": "virtual:nuxt-i18n-3da2909c",
      },
    ],
    "ja": [
      {
        "cache": "true",
        "importString": "import locale_ja_46json_3369e867 from "virtual:nuxt-i18n-3369e867";",
        "key": ""locale_ja_46json_3369e867"",
        "load": "() => import("virtual:nuxt-i18n-3369e867" /* webpackChunkName: "locale_ja_46json_3369e867" */)",
        "relative": "srcDir/ja.json",
        "specifier": "virtual:nuxt-i18n-3369e867",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`locale file in nested 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": "true",
        "importString": "import locale_main_46json_0f29fe58 from "virtual:nuxt-i18n-0f29fe58";",
        "key": ""locale_main_46json_0f29fe58"",
        "load": "() => import("virtual:nuxt-i18n-0f29fe58" /* webpackChunkName: "locale_main_46json_0f29fe58" */)",
        "relative": "srcDir/en/main.json",
        "specifier": "virtual:nuxt-i18n-0f29fe58",
      },
    ],
    "fr": [
      {
        "cache": "true",
        "importString": "import locale_main_46json_a4c1f89d from "virtual:nuxt-i18n-a4c1f89d";",
        "key": ""locale_main_46json_a4c1f89d"",
        "load": "() => import("virtual:nuxt-i18n-a4c1f89d" /* webpackChunkName: "locale_main_46json_a4c1f89d" */)",
        "relative": "srcDir/fr/main.json",
        "specifier": "virtual:nuxt-i18n-a4c1f89d",
      },
    ],
    "ja": [
      {
        "cache": "true",
        "importString": "import locale_main_46json_c0b7f14e from "virtual:nuxt-i18n-c0b7f14e";",
        "key": ""locale_main_46json_c0b7f14e"",
        "load": "() => import("virtual:nuxt-i18n-c0b7f14e" /* webpackChunkName: "locale_main_46json_c0b7f14e" */)",
        "relative": "srcDir/ja/main.json",
        "specifier": "virtual:nuxt-i18n-c0b7f14e",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en/main.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja/main.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr/main.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`multiple files 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": "true",
        "importString": "import locale_en_46json_ff503de3 from "virtual:nuxt-i18n-ff503de3";",
        "key": ""locale_en_46json_ff503de3"",
        "load": "() => import("virtual:nuxt-i18n-ff503de3" /* webpackChunkName: "locale_en_46json_ff503de3" */)",
        "relative": "srcDir/en.json",
        "specifier": "virtual:nuxt-i18n-ff503de3",
      },
    ],
    "es": [
      {
        "cache": "true",
        "importString": "import locale_es_46json_ece193f7 from "virtual:nuxt-i18n-ece193f7";",
        "key": ""locale_es_46json_ece193f7"",
        "load": "() => import("virtual:nuxt-i18n-ece193f7" /* webpackChunkName: "locale_es_46json_ece193f7" */)",
        "relative": "srcDir/es.json",
        "specifier": "virtual:nuxt-i18n-ece193f7",
      },
    ],
    "es-AR": [
      {
        "cache": "true",
        "importString": "import locale_es_46json_ece193f7 from "virtual:nuxt-i18n-ece193f7";",
        "key": ""locale_es_46json_ece193f7"",
        "load": "() => import("virtual:nuxt-i18n-ece193f7" /* webpackChunkName: "locale_es_46json_ece193f7" */)",
        "relative": "srcDir/es.json",
        "specifier": "virtual:nuxt-i18n-ece193f7",
      },
      {
        "cache": "true",
        "importString": "import locale_es_45AR_46json_2a25cb46 from "virtual:nuxt-i18n-2a25cb46";",
        "key": ""locale_es_45AR_46json_2a25cb46"",
        "load": "() => import("virtual:nuxt-i18n-2a25cb46" /* webpackChunkName: "locale_es_45AR_46json_2a25cb46" */)",
        "relative": "srcDir/es-AR.json",
        "specifier": "virtual:nuxt-i18n-2a25cb46",
      },
    ],
    "fr": [
      {
        "cache": "true",
        "importString": "import locale_fr_46json_3da2909c from "virtual:nuxt-i18n-3da2909c";",
        "key": ""locale_fr_46json_3da2909c"",
        "load": "() => import("virtual:nuxt-i18n-3da2909c" /* webpackChunkName: "locale_fr_46json_3da2909c" */)",
        "relative": "srcDir/fr.json",
        "specifier": "virtual:nuxt-i18n-3da2909c",
      },
    ],
    "ja": [
      {
        "cache": "true",
        "importString": "import locale_ja_46json_3369e867 from "virtual:nuxt-i18n-3369e867";",
        "key": ""locale_ja_46json_3369e867"",
        "load": "() => import("virtual:nuxt-i18n-3369e867" /* webpackChunkName: "locale_ja_46json_3369e867" */)",
        "relative": "srcDir/ja.json",
        "specifier": "virtual:nuxt-i18n-3369e867",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
    {
      "code": "es",
      "files": [
        {
          "cache": true,
          "path": "es.json",
        },
      ],
    },
    {
      "code": "es-AR",
      "files": [
        {
          "cache": true,
          "path": "es.json",
        },
        {
          "cache": true,
          "path": "es-AR.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": true,
    "locales": [],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`toCode: function (arrow) 1`] = `
{
  "localeLoaders": {},
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "testFunc": [Function],
      },
    ],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`toCode: function (named) 1`] = `
{
  "localeLoaders": {},
  "normalizedLocales": [],
  "nuxtI18nOptions": {
    "defaultLocale": "en",
    "i18nModules": [],
    "lazy": false,
    "locales": [
      {
        "code": "en",
        "files": [
          "en.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "ja",
        "files": [
          "ja.json",
        ],
        "testFunc": [Function],
      },
      {
        "code": "fr",
        "files": [
          "fr.json",
        ],
        "testFunc": [Function],
      },
    ],
    "vueI18n": "",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-6354e9fa" /* webpackChunkName: "config_i18n_46config_46ts_6354e9fa" */)",
      "relative": "/test/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-6354e9fa",
    },
  ],
}
`;

exports[`vueI18n option 1`] = `
{
  "localeLoaders": {
    "en": [
      {
        "cache": "true",
        "importString": "import locale_en_46json_ff503de3 from "virtual:nuxt-i18n-ff503de3";",
        "key": ""locale_en_46json_ff503de3"",
        "load": "() => Promise.resolve(locale_en_46json_ff503de3)",
        "relative": "srcDir/en.json",
        "specifier": "virtual:nuxt-i18n-ff503de3",
      },
    ],
    "fr": [
      {
        "cache": "true",
        "importString": "import locale_fr_46json_3da2909c from "virtual:nuxt-i18n-3da2909c";",
        "key": ""locale_fr_46json_3da2909c"",
        "load": "() => Promise.resolve(locale_fr_46json_3da2909c)",
        "relative": "srcDir/fr.json",
        "specifier": "virtual:nuxt-i18n-3da2909c",
      },
    ],
    "ja": [
      {
        "cache": "true",
        "importString": "import locale_ja_46json_3369e867 from "virtual:nuxt-i18n-3369e867";",
        "key": ""locale_ja_46json_3369e867"",
        "load": "() => Promise.resolve(locale_ja_46json_3369e867)",
        "relative": "srcDir/ja.json",
        "specifier": "virtual:nuxt-i18n-3369e867",
      },
    ],
  },
  "normalizedLocales": [
    {
      "code": "en",
      "files": [
        {
          "cache": true,
          "path": "en.json",
        },
      ],
    },
    {
      "code": "ja",
      "files": [
        {
          "cache": true,
          "path": "ja.json",
        },
      ],
    },
    {
      "code": "fr",
      "files": [
        {
          "cache": true,
          "path": "fr.json",
        },
      ],
    },
  ],
  "nuxtI18nOptions": {
    "i18nModules": [],
    "lazy": false,
    "locales": [],
    "vueI18n": "vue-i18n.config.ts",
  },
  "vueI18nConfigs": [
    {
      "importer": "() => import("virtual:nuxt-i18n-84df1640" /* webpackChunkName: "config_vue_45i18n_46options_46js_84df1640" */)",
      "relative": "/path/foo/layer2/vue-i18n.options.js",
      "specifier": "virtual:nuxt-i18n-84df1640",
    },
    {
      "importer": "() => import("virtual:nuxt-i18n-faa288dc" /* webpackChunkName: "config_i18n_46custom_46ts_faa288dc" */)",
      "relative": "/path/layer1/i18n.custom.ts",
      "specifier": "virtual:nuxt-i18n-faa288dc",
    },
    {
      "importer": "() => import("virtual:nuxt-i18n-42902d1e" /* webpackChunkName: "config_i18n_46config_46ts_42902d1e" */)",
      "relative": "/path/to/i18n.config.ts",
      "specifier": "virtual:nuxt-i18n-42902d1e",
    },
  ],
}
`;
